--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+  href="./resources/css/style.css">
   <title>Excursion</title>
 </head>
 <body>
