--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
   <title>Excursion</title>
 </head>
 <body>
-  <h1>Discover hidden places in the world around you</h1>
-<p></p>
+  <h1 class="headers">Discover hidden places in the world around you</h1>
+  <p class="links">Download Excursion (Coming soon!)</p>
+  <p>
+    <video autoplay loop src="./resources/videos/excursion.mp4">Video not supported</video>
+  </p>
+  <h2 class="headers">Your personal travel guide</h2>
+  <p class="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p>
+    <img src="resources/images/camp.jpg"/>
+  </p>
+  <p>
+    <img src="resources/images/phone.png"/>
+  </p>
+  <h2 class="headers">Coming Soon for iPhone and Android</h2>
+  <p class="links">Download Excursion (Coming soon!)</p>
+  <p class="copyright">© Excursion</p>
 </body>
 </html>
